# DataZipcaster

./: .flake8  .gitignore  README.md  example_config.ini  pyproject.toml
data_zipcaster/: __main__.py  base_plugin.py  base_plugins.py  constants.py  utils.py
data_zipcaster/assets/: __init__.py  gear_hashes.json
data_zipcaster/cli/: README.md  base_plugins.py  config_reader.py  constants.py  main.py  main_.py  plugin_discover.py  styles.py  utils.py
data_zipcaster/cli/importers/: example_importer.py
data_zipcaster/exporters/json_file/: __init__.py  plugin.py
data_zipcaster/exporters/splashcat/: convert.py  plugin.py  utils.py
data_zipcaster/gui/: __init__.py  base_class.py  constants.py  exceptions.py  main_window.py  main_window_2.py  signal_manager.py  state_manager.py  ui_class.py  ui_manager.py  utils.py  widget_wrappers.py
data_zipcaster/gui/ui/: main.ui
data_zipcaster/importers/: __init__.py  example_importer.py
data_zipcaster/importers/splatnet/: plugin.py
data_zipcaster/json_keys/: anarchy.py  common.py  players.py  teams.py  xbattle.py
data_zipcaster/models/: players.py  utils.py  vs_modes.py
data_zipcaster/models/main/: __init__.py  metadata.py  players.py  typing.py  vs_modes.py
data_zipcaster/models/splatnet/: __init__.py  detailed.py  metadata.py  vs.py
data_zipcaster/schemas/: overview.py  players.py  typing.py  vs_modes.py
data_zipcaster/transforms/splatnet_to_main/: __init__.py  common.py  metadata.py  players.py  typing.py  vs.py
data_zipcaster/views/splashcat/: __init__.py  conversions.py
(+38 files in other folders)
