[tool.poetry]
name = "data_zipcaster"
version = "0.1.0"
description = "Import and Export SplatNet Data anywhere!"
authors = ["Cesar E Garza <cesar@cegarza.com>"]
license = "GPL-3.0-or-later"
packages = [{include = "data_zipcaster"}]

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
msgpack = "^1.0.5"
rich-click = "^1.6.1"
splatnet3-scraper = "^0.9.4"
pydantic = "^2.0.3"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
darglint = "^1.8.1"
pytest = "^7.2.1"
coverage = "^7.2.0"
ipykernel = "^6.21.2"
ipython = "^8.10.0"
bs4 = "^0.0.1"
pandas = "^2.0.1"
numpy = "^1.24.3"
mypy = "^1.3.0"
pep8-naming = "^0.13.3"
flake8-print = "^5.0.0"
flake8-expression-complexity = "^0.0.11"
genson = "^1.2.2"
pyperclip = "^1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
pretty = true
exclude = [".venv", "tests", "docs", "examples", "data_zipcaster/cli"]

[tool.pytest.ini_options]
testpaths = "tests"
addopts = [
    "-v",
    "--tb=auto",
    "--showlocals",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "internet: marks tests as requiring internet access (deselect with '-m \"not internet\"')",
]
